# MagicBook

./: CMakeLists.txt  vcpkg.json
.cmake/: InstallerScript.iss.in  version_exe.rc.in
app/: CMakeLists.txt  MagicBook_en_US.ts  MagicBook_zh_CN.ts  Version.h  app.qrc
app/qml/: App.qml  main.qml
app/qml/component/: CodeExpander.qml  HotLoader.qml  NavigationView.qml
app/qml/global/: GlobalModel.qml  ItemsFooter.qml  ItemsOriginal.qml
app/qml/page/: Home.qml  Settings.qml
app/qml/page/Other/: Captcha.qml  Network.qml  OpenGL.qml  QRCode.qml  RemoteLoader.qml  Timeline.qml  Tour.qml
app/qml/windows/: AboutWindow.qml  CrashWindow.qml  FluentInitializrWindow.qml  HotloadWindow.qml  LoginWindow.qml  MainWindow.qml  PageWindow.qml  StandardWindow.qml
app/src/: AppInfo.h  app_dmp.h  main.cpp  singleton.h  stdafx.h
app/src/component/: CircularReveal.h  FileWatcher.h  FpsItem.h  OpenGLItem.h
app/src/helper/: InitializrHelper.h  Log.h  Network.h  SettingsHelper.h  TranslateHelper.cpp  TranslateHelper.h
